--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.0",
     "cache-require-paths": "^0.3.0",
     "cors": "^2.8.5",
@@ -24,11 +25,13 @@
     "jquery-validation": "^1.19.5",
     "js-cookie": "^3.0.5",
     "latest-version": "^7.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.14.0",
-    "react-router-dom": "^6.12.1",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "unicons": "^0.0.3",
     "user-context": "^1.0.14",
