--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-bootstrap": "^2.8.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-recaptcha-google": "^1.1.1",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
